@@ -1,6 +1,8 @@
 09 May 2008 - trunk
 -------------------
 
+* Persistent counter updates are now atomic.
+
 * Force modules "mod_rpaf-2.0.c" and "mod_custom_header.c" to run before
   ModSecurity so that the correct IP is used.
 
